Change data dir

--- a/plug-website/plug.org.au.conf
+++ b/plug-website/plug.org.au.conf
@@ -8,7 +8,7 @@ server {
 	# listen 443 ssl default_server;
 	# listen [::]:443 ssl default_server;
 
-	root /var/www/bayonet.plug.org.au;
+	root /var/www/plug.org.au;
 
 	index index.html index.htm index.nginx-debian.html;
 
