--- a/site.yml
+++ b/site.yml
@@ -37,7 +37,7 @@
 
   - name: Setup PLUG-General EFS mount
     mount:
-      name: /srv/efs/
+      name: /srv/efs
       src: fs-9e936fa7.efs.ap-southeast-2.amazonaws.com:/
       fstype: nfs4
       opts: _netdev,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
@@ -45,7 +45,7 @@
 
   - name: Setup PLUG-Backup EFS mount
     mount:
-      name: /srv/backup/
+      name: /srv/backup
       src: fs-2f718d16.efs.ap-southeast-2.amazonaws.com:/
       fstype: nfs4
       opts: _netdev,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
