--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,8 @@
 ---
 # file: site.yml
 - hosts: web-servers
-  remote_user: {{ glass_user }}
+  remote_user: '{{ glass_user }}'
+  become: yes
 
   tasks:
   #role:base
