--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -26,5 +26,12 @@
   - name: Sudo - Add an additional "sudoers" policy to allow for passwordless sudo
     template: src=sudo/sudoers.d/glass dest=/etc/sudoers.d/glass validate='/usr/sbin/visudo -cf %s' mode=0440
 
+  - name: Ansible - install key packages
+    apt: name={{ item }} state=latest
+    with_items:
+      - ansible
+      - python-apt
+      - git
+
 # TODO: remove bootstrap key from authorized hosts
 
