--- a/site.yml
+++ b/site.yml
@@ -182,12 +182,31 @@
     # TODO nginx cofig
     # TODO php pool?
 
+  #role:mail-mta
+  - name: Install exim4
+    apt: name=exim4-daemon-light
+
+  - name: Preconfigure exim4
+    template:
+      src: mail-mta/update-exim4.conf.conf.j2
+      dest: /etc/exim4/update-exim4.conf.conf
+      owner: root
+      group: root
+      mode: 0644
+    notify: reconfigure exim4
+
+  # TODO
+  #- debconf: name='exim4-config' question='exim4/dc_local_interfaces' value='' vtype='string'
+  #  # notify: reconfigure exim4
+
   #role:mumble-servers
   - name: Install Mumble
     apt: name=mumble-server state=latest
-
+    
   #TODO: Move this to its own file
   handlers:
     - name: reload nginx
       service: name=nginx state=reloaded
 
+    - name: reconfigure exim4
+      command: dpkg-reconfigure -f noninteractive exim4-config
