Experimental hack to get LE behaving

--- a/site.yml
+++ b/site.yml
@@ -89,8 +89,9 @@
   - name: Install certbot
     apt: name=certbot state=latest
 
-  - name: Install certbot nginx plugin
-    apt: name=python-certbot-nginx state=latest
+# We run this at the end for now
+#  - name: Install certbot nginx plugin
+#    apt: name=python-certbot-nginx state=latest
 
   #role:borgbackup
   - name: Install Borg backup utility
@@ -213,6 +214,10 @@
   handlers:
     - name: reload nginx
       service: name=nginx state=reloaded
+      notify: install certbot nginx plugin
+
+    - name: install certbot nginx plugin
+      apt: name=python-certbot-nginx state=latest
 
     - name: reconfigure exim4
       command: dpkg-reconfigure -f noninteractive exim4-config
