Remove earlier hack and comment LE by default

--- a/site.yml
+++ b/site.yml
@@ -89,9 +89,8 @@
   - name: Install certbot
     apt: name=certbot state=latest
 
-# We run this at the end for now
-#  - name: Install certbot nginx plugin
-#    apt: name=python-certbot-nginx state=latest
+  - name: Install certbot nginx plugin
+    apt: name=python-certbot-nginx state=latest
 
   #role:borgbackup
   - name: Install Borg backup utility
