Switch domain to bayonet testing one

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -23,7 +23,7 @@ server {
 
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name lists.plug.org.au;
+	server_name lists2.plug.org.au;
 
 	location / {
 		# First attempt to serve request as file, then
