--- a/site.yml
+++ b/site.yml
@@ -233,7 +233,7 @@
       dest: /etc/nginx/sites-available/lists.plug.org.au.conf
     notify: reload nginx
 
-  - name: Enable nginx site config
+  - name: Mailman - Enable nginx site config
     file:
       state: link
       src: ../sites-available/lists.plug.org.au.conf
