--- a/site.yml
+++ b/site.yml
@@ -76,6 +76,10 @@
       opts: noauto,_netdev,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
       state: present
 
+  #role:dns-servers
+  - name: DNS - Install nsd
+    apt: name=nsd state=latest
+
   #role:web-servers
   - name: Install nginx
     apt: name=nginx state=latest
