--- a/site.yml
+++ b/site.yml
@@ -80,6 +80,11 @@
   - name: DNS - Install nsd
     apt: name=nsd state=latest
 
+  - name: DNS - Add plug.org.au zonefile
+    template: src=dns/plug.org.au.zone.j2 dest=/etc/nsd/plug.org.au.zone
+#    notify:
+#    - reload nsd
+
   #role:web-servers
   - name: Install nginx
     apt: name=nginx state=latest
