--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,6 @@
 ---
 # file: site.yml
-- hosts: web-servers
+- hosts: web_servers
   remote_user: '{{ glass_user }}'
   become: yes
 
@@ -59,22 +59,6 @@
     with_items: 
       - /srv/efs
       - /srv/backup
-
-  - name: Setup PLUG-General EFS mount
-    mount:
-      name: /srv/efs
-      src: fs-9e936fa7.efs.ap-southeast-2.amazonaws.com:/
-      fstype: nfs4
-      opts: noauto,_netdev,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
-      state: present
-
-  - name: Setup PLUG-Backup EFS mount
-    mount:
-      name: /srv/backup
-      src: fs-2f718d16.efs.ap-southeast-2.amazonaws.com:/
-      fstype: nfs4
-      opts: noauto,_netdev,nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
-      state: present
 
   #role:dns-servers
   - name: DNS - Install nsd
@@ -149,7 +133,7 @@
       name: borg-power
       shell: /bin/bash
       home: /srv/backup/borg-power
-      createhome: no
+      createhome: yes
       uid: 10001
       comment: "power backup user"
 
@@ -220,55 +204,6 @@
     # TODO nginx cofig
     # TODO php pool?
 
-  #role:mail-mta
-  - name: Install MTA-relevant packages
-    apt: name={{ item }} state=latest
-    with_items:
-      - mutt
-      - swaks
-
-  - name: Install exim4
-    apt: name=exim4-daemon-light
-
-  - name: Preconfigure exim4
-    template:
-      src: mail-mta/update-exim4.conf.conf.j2
-      dest: /etc/exim4/update-exim4.conf.conf
-      owner: root
-      group: root
-      mode: 0644
-    notify: "update exim4 config"
-
-  #role:mailman
-  - name: Mailman - Install Mailman and fcgiwrap
-    apt: name={{ item }} state=latest
-    with_items:
-      - mailman
-      - fcgiwrap
-
-  - name: Mailman - Configure mailman URLs
-    template:
-      src: mailman/mm_cfg.py.j2
-      dest: /etc/mailman/mm_cfg.py
-    notify: reload mailman
-
-  - name: Mailman - Install nginx site config
-    template:
-      src: mailman/lists.plug.org.au.conf
-      dest: /etc/nginx/sites-available/lists.plug.org.au.conf
-    notify: reload nginx
-
-  - name: Mailman - Enable nginx site config
-    file:
-      state: link
-      src: ../sites-available/lists.plug.org.au.conf
-      dest: /etc/nginx/sites-enabled/lists.plug.org.au.conf
-    notify: reload nginx
-
-  # TODO
-  #- debconf: name='exim4-config' question='exim4/dc_local_interfaces' value='' vtype='string'
-  #  # notify: reconfigure exim4
-
   #role:fail2ban
   - name: Install fail2ban and dependencies
     apt: name={{ item }} state=latest
@@ -321,14 +256,6 @@
 
     - name: reload mailman
       service: name=mailman state=reloaded
-
-    - name: reconfigure exim4
-      command: dpkg-reconfigure -f noninteractive exim4-config
-      listen: "update exim4 config"
-
-    - name: restart exim4
-      service: name=exim4 state=restarted
-      listen: "update exim4 config"
 
     - name: reload fail2ban
       service: name=fail2ban state=reloaded
