Change nginx server names to reflect new tests

--- a/plug-website/plug.org.au.conf
+++ b/plug-website/plug.org.au.conf
@@ -23,7 +23,7 @@ server {
 
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name services.plug.org.au bayonet.plug.org.au lpt.plug.org.au wedge.plug.org.au *.dev.plug.org.au;
+	server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au;
 
 	location / {
 		# First attempt to serve request as file, then
