Stop creating EFS mountpoints

--- a/site.yml
+++ b/site.yml
@@ -57,16 +57,16 @@
   - name: Install NFS utilities
     apt: name=nfs-common state=latest
 
-  - name: Ensure EFS mount points exist
-    file:
-      path: "{{ item }}"
-      state: directory
-      owner: root
-      group: root
-      mode: 0755
-    with_items: 
-      - /srv/efs
-      - /srv/backup
+#  - name: Ensure EFS mount points exist
+#    file:
+#      path: "{{ item }}"
+#      state: directory
+#      owner: root
+#      group: root
+#      mode: 0755
+#    with_items:
+#      - /srv/efs
+#      - /srv/backup
 
   #role:dns-servers
   - name: DNS - Install Knot DNS
