spamassassin role - fix ansible 2.3 compat

--- a/spamassassin/tasks/main.yml
+++ b/spamassassin/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: Enable SpamAssassin nightly cron
   lineinfile:
-    path: /etc/default/spamassassin
+    dest: /etc/default/spamassassin
     regexp: '^CRON='
     line: CRON=1
 
