--- a/site.yml
+++ b/site.yml
@@ -202,6 +202,14 @@
   - name: Install useful LDAP utils
     apt: name=ldap-utils state=latest
 
+  - name: Create LDAP automatic backup script
+    template:
+      src: ldap/20-ldapdump
+      dest: /etc/cron.daily/20-ldapdump
+      owner: root
+      group: root
+      mode: 0755
+
   #role:php
   - name: PHP - Install php-fpm
     apt: name=php7.0-fpm
