--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -67,11 +67,11 @@ server {
                autoindex on;
         }
 
-#    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-#    listen 443 ssl; # managed by Certbot
-#    ssl_certificate /etc/letsencrypt/live/bayonet.plug.org.au/fullchain.pem; # managed by Certbot
-#    ssl_certificate_key /etc/letsencrypt/live/bayonet.plug.org.au/privkey.pem; # managed by Certbot
-#    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-#    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/plug.org.au/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/plug.org.au/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
