Create and split redirect maps for nginx sites

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -2,7 +2,7 @@
 
 # Setup redirect map
 map $request_uri $new_uri {
-	include /var/www/plug.org.au/redirects.map;
+	include /etc/nginx/redirects-lists.map;
 }
 
 server {
