Redirect root of lists to mailman

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -26,9 +26,8 @@ server {
 	server_name lists2.plug.org.au;
 
 	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
+		# Redirect user to the proper mailman location
+		return 302 https://lists2.plug.org.au/mailman/listinfo;
 	}
 
 	location /media {
