Force HTTPS on main plug website nginx config

--- a/plug-website/plug.org.au.conf
+++ b/plug-website/plug.org.au.conf
@@ -6,18 +6,10 @@ map $request_uri $new_uri {
 }
 
 server {
-	listen 80;
-	listen [::]:80;
-
 	#Handle redirects
 	if ($new_uri) {
 		return 302 $new_uri;
 	}
-
-	# SSL configuration
-	#
-	# listen 443 ssl default_server;
-	# listen [::]:443 ssl default_server;
 
 	root /var/www/plug.org.au;
 
@@ -36,11 +28,20 @@ server {
 		autoindex on;
 	}
 
-#    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-#    listen 443 ssl; # managed by Certbot
-#    ssl_certificate /etc/letsencrypt/live/bayonet.plug.org.au/fullchain.pem; # managed by Certbot
-#    ssl_certificate_key /etc/letsencrypt/live/bayonet.plug.org.au/privkey.pem; # managed by Certbot
-#    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-#    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    #listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/plug.org.au/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/plug.org.au/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
+}
+
+server {
+        listen 80 ;
+        listen [::]:80 ;
+
+        server_name mail.po1.plug.org.au mail.plug.org.au services.plug.org.au edison.plug.org.au *.dev.plug.org.au;
+
+        return 301 https://$host$request_uri;
 }
