Force HTTPS on mailman nginx config + fix redirect maps

--- a/mailman/lists.plug.org.au.conf
+++ b/mailman/lists.plug.org.au.conf
@@ -1,23 +1,15 @@
-# Ansible managed
+# {{ ansible_managed }}
 
 # Setup redirect map
-map $request_uri $new_uri {
+map $request_uri $new_uri_lists {
 	include /etc/nginx/redirects-lists.map;
 }
 
 server {
-	listen 80;
-	listen [::]:80;
-
 	#Handle redirects
-	if ($new_uri) {
-		return 302 $new_uri;
+	if ($new_uri_lists) {
+		return 302 $new_uri_lists;
 	}
-
-	# SSL configuration
-	#
-	# listen 443 ssl default_server;
-	# listen [::]:443 ssl default_server;
 
 	root /var/www/plug.org.au;
 
@@ -73,4 +65,13 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
+}
+
+server {
+	listen 80;
+	listen [::]:80;
+
+	server_name lists2.plug.org.au;
+
+	return 301 https://$host$request_uri;
 }
